--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "dotenv": "^16.0.2",
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-markdown": "^8.0.3",
+    "react-simplemde-editor": "^5.0.2"
   },
   "devDependencies": {
     "@ethersproject/abi": "^5.4.7",
