--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@openzeppelin/contracts": "^4.7.3",
     "dotenv": "^16.0.2",
+    "iconsax-react": "^0.0.8",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
