--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@bundlr-network/client": "^0.7.8",
     "@openzeppelin/contracts": "^4.7.3",
+    "bignumber.js": "^9.1.0",
     "dotenv": "^16.0.2",
     "iconsax-react": "^0.0.8",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.3",
-    "react-simplemde-editor": "^5.0.2"
+    "react-simplemde-editor": "^5.0.2",
+    "react-toastify": "^9.0.8"
   },
   "devDependencies": {
     "@ethersproject/abi": "^5.4.7",
