--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.6.9",
     "@bundlr-network/client": "^0.7.8",
     "@openzeppelin/contracts": "^4.7.3",
     "bignumber.js": "^9.1.0",
     "dotenv": "^16.0.2",
+    "graphql": "^16.6.0",
     "iconsax-react": "^0.0.8",
     "next": "12.3.1",
     "react": "18.2.0",
