--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.3",
     "react-simplemde-editor": "^5.0.2",
-    "react-toastify": "^9.0.8"
+    "react-toastify": "^9.0.8",
+    "rehype-raw": "^6.1.1",
+    "remark-gfm": "^3.0.1"
   },
   "devDependencies": {
     "@ethersproject/abi": "^5.4.7",
