--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "dotenv": "^16.0.2",
     "graphql": "^16.6.0",
     "iconsax-react": "^0.0.8",
+    "moment": "^2.29.4",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.3",
     "react-simplemde-editor": "^5.0.2",
+    "react-syntax-highlighter": "^15.5.0",
     "react-toastify": "^9.0.8",
     "rehype-raw": "^6.1.1",
     "remark-gfm": "^3.0.1"
@@ -33,6 +35,7 @@
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
     "@nomiclabs/hardhat-ethers": "^2.0.0",
     "@nomiclabs/hardhat-etherscan": "^3.0.0",
+    "@tailwindcss/typography": "^0.5.7",
     "@typechain/ethers-v5": "^10.1.0",
     "@typechain/hardhat": "^6.1.2",
     "autoprefixer": "^10.4.12",
